Closed Bug 1341412 Opened 7 years ago Closed 7 years ago

Baldr: fix offset reported by validation error

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox52 --- unaffected
firefox53 --- wontfix
firefox54 --- fixed

People

(Reporter: luke, Assigned: luke)

Details

Attachments

(1 file)

When bug 1329018 moved validation into helper threads, it accidentally changed module validation errors to be function-relative instead of module-relative like the rest offsets reported by SM.  Another (pre-existing) problem is that the reported offset would be *after* the op which caused the failure; this patch fixes this problem as well and adds tests.
Attachment #8839634 - Flags: review?(bbouvier)
Comment on attachment 8839634 [details] [diff] [review]
fix-compile-error

Review of attachment 8839634 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, thanks!
Attachment #8839634 - Flags: review?(bbouvier) → review+
(Just a error message, so probably not worth uplifting.)
Pushed by lwagner@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ea11b190dac4
Baldr: fix offset reported by validation error (r=bbouvier)
https://hg.mozilla.org/mozilla-central/rev/ea11b190dac4
https://hg.mozilla.org/mozilla-central/rev/49abbdfdd1ab
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: