Bug 1341412 - Baldr: fix offset reported by validation error (r=bbouvier)

MozReview-Commit-ID: CllhPo4uGde